<resources>
    <string name="app_name">confidante</string>
    <string name="profile">profile</string>
    <string name="chat">chat</string>
    <string name="match">match</string>
    <string name="user_full_name">Your Name</string>
    <string name="bio_header">Bio</string>
    <string name="interest_header">Interests</string>
    <string name="profile_bio_hint">Enter a Bio</string>
    <string name="username">\@username</string>
    <string name="new_confidant">You have a new confidant!</string>
    <string name="bio_sample">Hi, my name is Blah! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="interests_sample">Reading, Video Games, Music, Piano, Call of Duty, Genshin Impact, Undertale, Blah</string>
    <string name="username_field">Username</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="existing_account_link">Already have an account?</string>
    <string name="register_account_link">Create an account</string>
    <string name="registration_button">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="message_text_field">Enter Message</string>
    <string name="send_button">Send</string>
    <string name="myinterest_holder">My Interest</string>
    <string name="back_label">Back</string>
</resources>
