<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient">

    <LinearLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="100dp"
        android:paddingBottom="75dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_confidant"
            android:textColor="#fff"
            android:textSize="28sp"
            android:textAlignment="center"
            android:layout_marginBottom="25dp" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/circle"
            android:src="@drawable/profile_default"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/profile_user_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_full_name"
            android:textColor="#fff"
            android:textSize="48sp"
            android:layout_marginTop="25dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#fff"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:textSize="32sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="75dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>