<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#23D5D5">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="42dp"
        android:layout_marginTop="25dp"
        android:text="@string/app_name"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginTop="115dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/logo_white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/chat_button"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/baseline_chat_white_48"
                android:background="@drawable/button_border" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:text="@string/chat"
                android:textSize="24sp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="25dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/profile_button"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/baseline_person_white_48"
                android:background="@drawable/button_border"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:text="@string/profile"
                android:textSize="24sp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="100dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/search_button"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/baseline_search_white_48"
                android:background="@drawable/button_border"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:text="@string/match"
                android:textSize="24sp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>