<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="75dp"
            android:paddingBottom="75dp"
            android:orientation="vertical"
            android:background="@drawable/gradient">

           <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture"
                android:layout_width="225dp"
                android:layout_height="225dp"
                android:src="@drawable/give_up"
                android:layout_gravity="center_horizontal"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/profile_user_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_full_name"
                    android:textColor="#fff"
                    android:textSize="34sp"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>

                <ImageView
                    android:id="@+id/edit_name"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/edit_white"
                    android:layout_marginLeft="15dp"
                    android:layout_toEndOf="@id/profile_user_full_name"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#fff"
                android:textAlignment="center"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="75dp"
            app:layout_constraintTop_toBottomOf="@id/profile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:background="#fff">

            <ImageButton
                android:id="@+id/edit_bio"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/edit_filled"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="right"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_person_white_48"
                android:background="#23D5D5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:padding="30dp"
                android:text="@string/bio_sample"
                android:textSize="24sp"
                android:lineHeight="40dp"/>

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:src="@drawable/heart_filled"/>
            
            <ImageButton
                android:id="@+id/edit_interests"
                android:layout_width="24dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edit_filled" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:padding="30dp"
                android:text="@string/interests_sample"
                android:textSize="24sp"
                android:lineHeight="40dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
